# prometheus-xmpp-alerts

./: .flake8  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST.in  Makefile  README.md  disperse.conf  disperse.toml  docker-compose.yml  prometheus-xmpp-alerts  prometheus-xmpp-alerts.service  pyproject.toml  releaser.conf  setup.cfg  setup.py  tox.ini  xmpp-alerts.yml.example
.github/: dependabot.yml
.github/workflows/: container.yml  disperse.yml  pythonpackage.yml  pythonpublish.yml  wheels.yaml
debian/: changelog  control  copyright  install  prometheus-xmpp-alerts.service  rules  watch  xmpp-alerts.yml
debian/tests/: control  testsuite
debian/upstream/: metadata
docker/: Dockerfile  generate_config.py  start.sh
prometheus_xmpp/: __init__.py  __main__.py  omemo_plugin.py
prometheus_xmpp/tests/: __init__.py
tests/: __init__.py  test_main.py
