[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus-xmpp-alerts"
authors = [{name = "Jelmer Vernooij", email = "jelmer@jelmer.uk"}]
description = "Prometheus XMPP Alerts hook"
readme = "README.md"
license = {text = "Apachev2"}
keywords = ["prometheus xmpp jabber"]
classifiers = ["Programming Language :: Python :: 3.14", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.10"]
requires-python = ">=3.10"
dependencies = [
    "slixmpp",
    "aiohttp",
    "pytz",
    "pyyaml",
    "aiohttp_openmetrics",
    "jinja2",
    "bs4",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://jelmer.uk/code/prometheus-xmpp-alerts"
"Bug Tracker" = "https://github.com/jelmer/prometheus-xmpp-alerts/issues"
Repository = "https://github.com/jelmer/prometheus-xmpp-alerts"
GitHub = "https://github.com/jelmer/prometheus-xmpp-alerts"

[project.scripts]
prometheus-xmpp-alerts = "prometheus_xmpp.__main__:main"

[project.optional-dependencies]
testing = ["pytz"]
dev = ["ruff==0.14.7"]

[tool.setuptools]
packages = ["prometheus_xmpp"]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "prometheus_xmpp.__version__"}
