[metadata]
name = prometheus-xmpp-alerts
author = Jelmer Vernooij
author_email = jelmer@jelmer.uk
url = https://jelmer.uk/code/prometheus-xmpp-alerts
description = Prometheus XMPP Alerts hook
version = 0.5.5
license = Apachev2
project_urls =
    Bug Tracker=https://github.com/jelmer/prometheus-xmpp-alerts/issues
    Repository=https://github.com/jelmer/prometheus-xmpp-alerts
    GitHub=https://github.com/jelmer/prometheus-xmpp-alerts
keywords = prometheus xmpp jabber
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Topic :: Software Development :: Version Control

[options]
packages = prometheus_xmpp
install_requires =
    slixmpp
    aiohttp
    pytz
    pyyaml
    aiohttp_openmetrics
    jinja2
    bs4
tests_require = pytz

[options.entry_points]
console_scripts =
    prometheus-xmpp-alerts=prometheus_xmpp_alerts:main
